1.docker file edit 2.spring plugin for image 3.html for transaction manage